// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DebateLink component should match the DebateLink (small screen) 1`] = `
<div
  className="debate-link"
  onMouseLeave={false}
  onMouseOver={false}
>
  <div
    className="debate-class"
    data-text="Debate"
    onClick={[Function]}
  >
    <span>
      Debate
    </span>
  </div>
</div>
`;

exports[`DebateLink component should match the DebateLink 1`] = `
<div
  className="debate-link"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="debate-class"
    data-text="Debate"
    onClick={[Function]}
  >
    <span>
      Debate
    </span>
  </div>
  <div
    className="header-container"
  >
    <section
      className="timeline-section"
      id="timeline"
    >
      <div
        className="max-container"
      >
        <Connect(DumbTimeline)
          identifier="survey"
          onMenuItemClick={[Function]}
          showNavigation={true}
        />
      </div>
    </section>
  </div>
</div>
`;
